Add missing ZFS_EXIT().

PR:		kern/124899
Submitted by:	Masakazu Asama <m-asama@ginzado.ne.jp>